--- a/playbooks/enforce_pom.yml
+++ b/playbooks/enforce_pom.yml
@@ -63,6 +63,6 @@
   roles:
     - { role: pom_reader, tags: ['pom_reader'] }
     - pom_project_updater
-    # - pom_deps_updater
-    # - pom_plugin_updater
+    - pom_deps_updater
+    - pom_plugin_updater
 
