--- a/roles/pom_deps_updater/tasks/main.yml
+++ b/roles/pom_deps_updater/tasks/main.yml
@@ -31,6 +31,7 @@
         msg:
           total_entries: "{{ deps_desired | length }}"
           sample: "{{ (deps_desired | dict2items)[:5] }}"
+      when: ansible_verbosity > 0
   when: deps_desired is not defined or deps_desired | length == 0
 
 - name: Ensure POM dependency facts are available
@@ -65,6 +66,7 @@
     msg:
       planned_changes: "{{ deps_plan | length }}"
       sample: "{{ (deps_plan | default([]))[:5] }}"
+  when: ansible_verbosity > 0
 
 - name: Apply dependency version updates
   community.general.xml:
