--- a/playbooks/enforce_pom.yml
+++ b/playbooks/enforce_pom.yml
@@ -4,8 +4,6 @@
   connection: local
   gather_facts: false
 
-  vars_files:
-    - ../applications.json   # contains version map
 
   vars:
     pom_file: "{{ lookup('env', 'PWD') }}/fixtures/sample_proj/pom.xml"
@@ -61,10 +59,10 @@
           sample: "{{ (deps_desired | dict2items)[:5] }}"
 
   roles:
-    - { role: pom_reader, tags: ['pom_reader'] }
+    # - { role: pom_reader, tags: ['pom_reader'] }
     - pom_project_updater
-    - pom_deps_updater
-    - pom_plugin_updater
+    # - pom_deps_updater
+    # - pom_plugin_updater
 
   post_tasks:
     - name: Final Summary
