Successfully updated roles to remove the pom reader

--- a/playbooks/enforce_pom.yml
+++ b/playbooks/enforce_pom.yml
@@ -61,7 +61,7 @@
   roles:
     # - { role: pom_reader, tags: ['pom_reader'] }
     - pom_project_updater
-    # - pom_deps_updater
+    - pom_deps_updater
     # - pom_plugin_updater
 
   post_tasks:
